ubiquity (2.7.15) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Remove dead code from debian/oem-config.oem-config.upstart.

  [ Evan Dandrea ]
  * Change the first partitioning page title to 'Installation Type.'
    Thanks Matthew Paul Thomas.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Jul 2011 12:22:46 +0100

ubiquity (2.7.14) oneiric; urgency=low

  * When copying symlinks, just try unlinking and handle exceptions, rather
    than statting them first to find out what to do.
  * Automatic update of included source packages: apt-setup 1:0.49ubuntu7,
    partman-target 73ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 15 Jul 2011 17:13:15 +0100

ubiquity (2.7.13) oneiric; urgency=low

  [ Evan Dandrea ]
  * Change the forward button text to Continue. Thanks to Matthew Paul
    Thomas for the suggestion.

  [ Mario Limonciello ]
  * Don't try to unlink directories during file copy routine that were
    created by partman (/var/lock, /var/run), rmdir them instead. 
    (LP: #810700)
  * Don't assume that gsettings is on PATH just because gconftool-2 is.
    They come from separate packages.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu27.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 15 Jul 2011 00:14:00 -0500

ubiquity (2.7.12) oneiric; urgency=low

  * Update disable_autologin to match current user-setup-apply, including
    lxdm and lightdm handling (LP: #806247).
  * Upgrade to indicator-0.4.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 09 Jul 2011 16:52:42 +0100

ubiquity (2.7.11) oneiric; urgency=low

  [ Luke Yelavich ]
  * Use at-spi2 dbus launcher to start the at-spi2 daemon
  * Determine accessibility state from gsettings using the gsettings command,
    to make sure privileges are dropped

  [ Colin Watson ]
  * Handle the case where one of the packages returned by 'pyversions -s' or
    'py3versions -s' is not installed (LP: #806349).